manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: website
  name: majd-website
  namespace: majd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 7
      containers:
        - image: hub.fg-tech.net/majd-website:8446c82
          imagePullPolicy: IfNotPresent
          name: majd-website
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          securityContext:
            privileged: false
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
      imagePullSecrets:
        - name: zot-regcred
