manifest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: dev
spec:
  ports:
  - name: tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: website
  sessionAffinity: None
  type: NodePort
