manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: majd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-majd"
    # external-dns.alpha.kubernetes.io/hostname: "majd-website.fg-tech.net"
    # external-dns.alpha.kubernetes.io/target: "k8s-local02.fg-tech.net"
    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    haproxy.org/ssl-redirect: "true"
    haproxy.org/server-timeout: "1200s"
    haproxy.org/connect-timeout: "1200s"
    haproxy.org/rate-limit-requests: "100"
    haproxy.org/rate-limit-period: "1s"
    haproxy.org/rate-limit-status-code: "429"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - majdeldin.dev
        - www.majdeldin.dev
      secretName: majdeldin-dev
  rules:
    - host: majdeldin.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: majd-website
                port:
                  number: 80

    - host: www.majdeldin.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: majd-website
                port:
                  number: 80
